--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/DB_RECORDING_STUDIO
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.config.import=classpath:env.properties
+spring.datasource.url=${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
