--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-json-serializer": "^6.0.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
